--- a/package.json
+++ b/package.json
@@ -27,12 +27,18 @@
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/material-nextjs": "^5.15.11",
+    "@tabler/icons-react": "^2.47.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0",
+    "lucide-react": "^0.344.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "2"
+    "recharts": "2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
