--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@mantine/carousel": "^7.6.1",
     "@mantine/charts": "^7.6.1",
     "@mantine/code-highlight": "^7.6.1",
-    "@mantine/core": "^7.6.1",
+    "@mantine/core": "^7.6.2",
     "@mantine/dates": "^7.6.1",
     "@mantine/dropzone": "^7.6.1",
     "@mantine/form": "^7.6.1",
-    "@mantine/hooks": "^7.6.1",
+    "@mantine/hooks": "^7.6.2",
     "@mantine/modals": "^7.6.1",
     "@mantine/notifications": "^7.6.1",
     "@mantine/nprogress": "^7.6.1",
+    "@mantine/tiptap": "^7.6.2",
     "@mui/icons-material": "^5.15.11",
     "@mui/material": "^5.15.11",
     "@mui/material-nextjs": "^5.15.11",
@@ -45,6 +46,10 @@
     "@radix-ui/react-toggle-group": "^1.0.4",
     "@tabler/icons-react": "^2.47.0",
     "@tanstack/react-table": "^8.13.2",
+    "@tiptap/extension-link": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
